--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Airbnb</title>
+    <title>Airbnb </title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+
+    <%= favicon_link_tag 'favicon.ico' %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
@@ -12,6 +14,13 @@
   </head>
 
   <body>
+       <p class="notice"><%= notice %></p>
+       <p class="alert"><%= alert %></p>
+
+    <% if controller_name !='registrations' && controller_name !='sessions'  %>
+    <%= render 'layouts/header' %>
+    <% end %>
+ 
   <%= yield %>
   </body>
 </html>
